tests/fixtures/errors/postprocess/postprocess/throw-null.js
module.exports = require("./hack")(() => {
  throw null;
});
